backend/deployments/production/k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orhestra-backend-production
  namespace: orchestra-space
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orchestra-backend-production
  template:
    metadata:
      labels:
        app: orchestra-backend-production
    spec:
      containers:
        - name: orchestra-backend-production
          image: martun5/orchestra-backend-production:v1.0.8
          imagePullPolicy: Always
          ports:
            - containerPort: 8282
          livenessProbe:
            httpGet:
              path: /congratulation
              port: 8282
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /congratulation
              port: 8282
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
      imagePullSecrets:
        - name: orchestra-secret-v1
